Seguimos mejorando la interfaz gafica